--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,7 +20,7 @@ services:
       - "80:80"
     volumes:
       - web-root:/var/www/html
-      - ./packages/webserver/nginx-conf:/etc/nginx/conf.d
+      - ${WEBAPP_STORAGE_HOME}/site-pessoal/packages/webserver/nginx-conf:/etc/nginx/conf.d
       - certbot-etc:/etc/letsencrypt
       - certbot-var:/var/lib/letsencrypt
     depends_on:
@@ -47,7 +47,7 @@ volumes:
    driver: local
    driver_opts:
      type: none
-     device: /home/victor/Projetos/PESSOAL/site-pessoal/packages/painel/build
+     device: ${WEBAPP_STORAGE_HOME}/site-pessoal/packages/painel/build
      o: bind
 networks:
   app-network:
